Added reading and creating clients functions

--- a/editar-cliente.html
+++ b/editar-cliente.html
@@ -34,7 +34,7 @@
                                 <input 
                                     class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                                     id="nombre"
-                                    name="nombre"
+                                    name="name"
                                     type="text"
                                     placeholder="Nombre Cliente"
                                 />
@@ -55,7 +55,7 @@
                                 <input 
                                     class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                                     id="telefono"
-                                    name="telefono"
+                                    name="phone"
                                     type="tel"
                                     placeholder="Teléfono Cliente"
                                 />
@@ -66,7 +66,7 @@
                                 <input 
                                     class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                                     id="empresa"
-                                    name="empresa"
+                                    name="company"
                                     type="text"
                                     placeholder="Empresa Cliente"
                                 />
